# s3-presigned-url-upload

./: README.md  demo
browser-upload/: .env.dist  README.md  demo  list_buckets.py  pyproject.toml  server.py
browser-upload/static/: index.html
browser-upload/upload-frontend/: .eslintcache
browser-upload/upload-frontend/src/: App.js
upload-frontend/: package.json
upload-frontend/src/: App.js
