[tool.poetry]
name = "browser-upload"
version = "0.1.0"
description = ""
authors = ["Dino Hensen <dino.hensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
aiofiles = "^0.6.0"
boto3 = "^1.16.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
